2010-08-01  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/20_linux_xen.in: Don't use UUID for LVM root (matching
	util/grub.d/10_linux.in).  Fixes Debian bug #591093.

2010-08-01  Robert Millan  <rmh@gnu.org>

	* kern/emu/getroot.c: Include `<grub/util/misc.h>'.
	
2010-07-31  Robert Millan  <rmh@gnu.org>

	* util/grub.d/10_kfreebsd.in: Make module handling more generic.

2010-07-31  Robert Millan  <rmh@gnu.org>

	* kern/emu/misc.c: Add missing license header.

2010-07-31  Robert Millan  <rmh@gnu.org>

	* configure.ac: Check for `libzfs.h' and `libnvpair.h'.

	* include/grub/util/libnvpair.h: Include `<config.h>'.
	[HAVE_LIBNVPAIR_H]: Include `<libnvpair.h>' instead of
	declaring libnvpair prototypes ourselves.
	* include/grub/util/libzfs.h: Include `<config.h>'.
	[HAVE_LIBZFS_H]: Include `<libzfs.h>' instead of
	declaring libzfs prototypes ourselves.

	(libzfs_handle): Moved to ...
	* include/grub/util/misc.h (libzfs_handle): ... here.
	Include `<grub/util/libzfs.h>'.

2010-07-30  Robert Millan  <rmh@gnu.org>

	* include/grub/emu/misc.h: Add missing license header.

2010-07-30  Robert Millan  <rmh@gnu.org>

	Enable `grub-probe -t device' resolution on ZFS.

	* configure.ac: Check for getfsstat(), libzfs and libnvpair.
	* include/grub/util/libnvpair.h: New file.
	* include/grub/util/libzfs.h: New file.

	* kern/emu/getroot.c: Include `<assert.h>' and `<error.h>'.
	[HAVE_LIBZFS && HAVE_LIBNVPAIR]: Include `<grub/util/libzfs.h>' and
	`<grub/util/libnvpair.h>'.
	[HAVE_GETFSSTAT]: Include `<sys/mount.h>'.

	(find_mount_point_from_dir): New static function.
	[HAVE_LIBZFS && HAVE_LIBNVPAIR] (find_root_device_from_libzfs): New
	function.
	[HAVE_LIBZFS && HAVE_LIBNVPAIR] (grub_guess_root_device): Use
	find_root_device_from_libzfs() before ressorting to find_root_device().

	* include/grub/util/misc.h (grub_util_init_libzfs): New function
	prototype.
	* util/misc.c: Include `<grub/util/libzfs.h>'.
	(grub_util_init_libzfs): New function.