@@ -1,3 +1,11 @@
+2010-08-01  Robert Millan  <rmh@gnu.org>
+
+	Prevent accidental use of uninitialized libzfs_handle.
+
+	* util/grub-probe.c (main): Move grub_util_init_libzfs() call to ...
+	* kern/emu/getroot.c (find_root_device_from_libzfs): ... here.
+	* util/misc.c (grub_util_init_libzfs): Make this function idempotent.
+
 2010-08-01  Colin Watson  <cjwatson@ubuntu.com>
 
 	* util/grub.d/20_linux_xen.in: Don't use UUID for LVM root (matching
